[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "iol_py_package_joseph0001"
version = "0.0.3"
authors = [
  { name="José Florentino Ramos", email="joseph0001@gmail.com" },
]
description = " Es una librería de Python diseñada para obtener información de la API de Invertir Online."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JRamos84/iol_py"
Issues = "https://github.com/pypa/sampleproject/issues"




